// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TitleColumn should render correctly no detail with data 1`] = `
<DocumentFragment>
  <div
    class="ins-composed-col sentry-mask data-hj-suppress"
  >
    <div>
      os_release
    </div>
    <div
      class="ins-m-nodetail"
    >
      something
    </div>
  </div>
</DocumentFragment>
`;

exports[`TitleColumn should render correctly with NO data 1`] = `
<DocumentFragment>
  <div
    class="ins-composed-col sentry-mask data-hj-suppress"
  >
    <div
      class=""
    >
      <a
        to=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TitleColumn should render correctly with data 1`] = `
<DocumentFragment>
  <div
    class="ins-composed-col sentry-mask data-hj-suppress"
  >
    <div
      class=""
    >
      <a
        to="testId"
      >
        something
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TitleColumn should render correctly with href 1`] = `
<DocumentFragment>
  <div
    class="ins-composed-col sentry-mask data-hj-suppress"
  >
    <div
      class=""
    >
      <a
        to="///link/to/item"
      >
        something
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TitleColumn should render correctly with os_release 1`] = `
<DocumentFragment>
  <div
    class="ins-composed-col sentry-mask data-hj-suppress"
  >
    <div>
      os_release
    </div>
    <div
      class=""
    >
      <a
        to="testId"
      >
        something
      </a>
    </div>
  </div>
</DocumentFragment>
`;
